www/style.css
body {
  font-family: "Open Sans";
  background-color: #003049;
  color: white;
  font-size: 20px;
  margin: 0;
  font-weight: 300;
  line-height: 1.4;
}

a {
  color: white;
}

input, button {
  border-radius: 2px;
  border: none;
  padding: 10px;
}

input {
  margin-bottom: 15px;
}

button {
  background-color: #2a9d8f;
  color: white;
}

button[disabled] {
  background-color: gray;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 300;
}

ul {
  list-style: none;
  padding-left: 0;
  margin: 0 0 10px 0;
}

td {
  padding: 10px 10px;
  font-size: 18px;
  vertical-align: top;
}

.main-container {
  margin-bottom: 50px; /* to allow for fixed dialog */
  padding-top: 50px;
  padding-bottom: 50px;
}

.centered {
  max-width: 900px;
  margin-left: auto;
  margin-right: auto;
}

.centered-small {
  max-width: 720px;
  margin-left: auto;
  margin-right: auto;
}

.container {
  padding-bottom: 30px;
}

.text-center {
  text-align: center;
}

.vs-logo-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

h2 {
  font-size: 28px;
  text-align: center;
}

h3 {
  font-size: 20px;
  font-weight: 600;
  margin-bottom: 10px;
}

.game-events__header {
  background-color: #003049;
  width: 100%;
}

.game-events__header.sticky {
  position: fixed;
  top: 0;
  left: 0;
  box-shadow: 0 0 5px rgba(0,0,0,0.8);
  background-color: #00283c;
  z-index: 1000;
}

.game-events__header.sticky + .game-events__form {
  padding-top: 100px;
}

.game-event-control-wrapper {
  max-width: 900px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.game-events-control {
  width: 260px;
  margin-right: 20px;
  margin-top: 15px;
}

.buttons-wrapper {
  display: flex;
  flex-direction: column;
  width: 400px;
  margin-top: 15px;
}

.buttons-wrapper button {
  margin-bottom: 7px;
}

#game-events__form-items {
  padding: 20px;
  background-color: #33596d;
}

col.game-event-check {
  width: 4%;
}

col.game-event-update {
  width: 30%;
}

col.game-event-visual {
  width: 35%;
}

col.game-event-game-status {
  width: 22%;
}

/* the last one doesn't need to be specified */
/*col.game-event-preview {*/
  /*width: 9%;*/
/*}*/

/*.game-event {*/
  /*padding-top: .5rem;*/
  /*padding-bottom: .5rem;*/
  /*margin-bottom: .5rem;*/
  /*font-size: 1.1rem;*/
/*}*/

.game-event:hover,
.game-event.interesting:hover {
  background-color: #00283c;
  color: white;
}

.game-event.interesting {
  background-color: pink;
  color: #003049;
}

.game-event-visual img {
  max-height: 250px;
  max-width: 300px;
  margin-top: 16px;
}

.game-event-visual select {
  display: block;
  margin-top: 4px;
}

.circle {
  height: 12px;
  width: 12px;
  display: inline-block;
  border-radius: 50%;
  margin-right: 2px;
}

.circle.full {
  background-color: #000;
}

.circle.empty {
  border: 2px solid black;
}

.diamond {
  width: 12px;
  height: 12px;
  display: inline-block;
  border: 1px solid #003049;
  transform: translate(2px, 2px) rotate(45deg);
}

.diamond:nth-child(2) {
  transform: translate(3px, -9px) rotate(45deg);
  margin-left: -3px;
  margin-right: -1px;
}

.diamond.filled {
  background-color: #003049;
}

#highlights-dialog__container {
  background-color: pink;
  position: fixed;
  bottom: 0;
  width: 100%;
  z-index: 100;
}

#highlights-dialog__text {
  color: #003049;
  font-family: 'Exo', sans-serif;
  font-size: 32px;
  position: relative;
  padding: 15px 20px;
  height: 90px;
}

#highlights-dialog__text p {
  width: 0;
  overflow: hidden;
  margin: 0;
  white-space: nowrap;
}

#highlights-dialog__text p.animate {
  /*letter-spacing: .001em;*/
  animation: typing 1.5s steps(40, end);
}

@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

#highlights-dialog__text p.animation-finished {
  width: 100%;
}

.dialog-control {
  width: 0;
  height: 0;
  position: absolute;
  right: 20px;
  bottom: 20px;
  opacity: 0;
  cursor: pointer;
}

#highlights-dialog__prev {
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-right: 20px solid #003049;
  margin-right: 25px;
}

#highlights-dialog__next {
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-left: 20px solid #003049;
}

.dialog-control.show {
  transition: opacity 0.5s ease-in-out;
  opacity: 100;
}

#diamond__image {
  width: 720px;
  height: 460px;
  /*background-image: url('./images/diamond.svg');*/
  background-size: 720px auto;
  position: relative;
}

.player-on-diamond {
  position: absolute;
  margin: 0;
  padding: 0;
  padding-left: 5px;
  padding-right: 5px;
  /* should be overwritten by team colour */
  color: #142c61;
  font-size: 18px;
  background-color: rgba(255, 255, 255, 0.8);
  border-radius: 2px;
  transition: all 0.5s ease-in-out;
  font-weight: 600;
  /*border: 1px solid #142c61;*/
}

.player-on-diamond.first {
  top: 400px;
  left: 330px;
}

.player-on-diamond.second {
  top: 255px;
  left: 430px;
}

.player-on-diamond.third {
  top: 72px;
  left: 240px;
}

.player-on-diamond.batting {
  top: 255px;
  left: 45px;
}

.player-on-diamond.mound {
  left: 240px;
  top: 164px;
}

.diamond-logo {
  top: 202px;
  left: 2px;
  height: 55px;
  position: absolute;
  transform: rotate(90deg);
}

.diamond-logo.m-outline {
  border: 1px solid black;
  border-radius: 50%;
  padding: 1px;
}

.vs-logo {
  width: 200px;
}

.vs-text {
  margin: 0 20px;
}

.scoreboard {
  position: absolute;
  right: 0;
  margin-right: 15px;
  margin-top: 10px;
  color: #142c61;
  background-color: white;
  border: 1px solid #142c61;
  border-radius: 5px;
  padding: 4px 8px;
  font-size: 18px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.scoreboard-small {
  margin: 0;
  padding: 4px 0;
  position: static;
  width: 180px;
}

.scoreboard li {
  padding-left: 5px;
  padding-right: 5px;
  font-size: 14px;
  font-weight: 600;
}

.scoreboard-teams > div {
  min-width: 65px;
  display: flex;
  justify-content: space-between;
  font-size: 16px;
}

.scoreboard-teams span:last-child {
  background-color: #ff9770;
  padding-left: 3px;
  padding-right: 3px;
}

.scoreboard-teams__away {
  margin-top: 2px;
}

.scoreboard-count__outs {
  text-transform: uppercase;
}

.scoreboard li.scoreboard-bases {
  padding-right: 8px;
}

.diamond-header {
  display: flex;
  justify-content: space-between;
}

.diamond-header .vs-logo {
  width: 80px;
}

#custom img {
  max-width: 720px;
  max-height: 460px;
}

.game-chooser input {
  display: block;
  width: 100%;
  margin-top: 10px;
}

.error-msg {
  color: #f4a261;
}

.game-matchup {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 460px;
}

.scroll-to {
  display: inline-block;
  margin-right: 5px;
  margin-bottom: 7px;
  background-color: pink;
  color: #003049;
  font-size: 18px;
  padding: 2px 5px;
  text-transform: lowercase;
}

.scroll-to-container {
  display: flex;
  margin-top: 15px;
}


.scroll-to-container span {
  width: 120px;
}

.d-none {
  display: none !important;
}

.game-event-preview__link.disabled {
  color: rgba(255,255,255,0.5);
  text-decoration: none;
  cursor: default;
}

.custom-visual__input {
  width: 100%;
  margin: 4px 0 0;
  padding: 0;
}

.custom-visual-form {
  margin-top: 16px;
}

.custom-visual-form label,
.custom-visual-form input {
  display: block;
}

.custom-visual-form input {
  line-height: 1;
  font-size: 18px;
  padding: 5px;
}

#exit-preview {
  margin-bottom: 8px;
}

